--- a/keycloak/keycloak.env
+++ b/keycloak/keycloak.env
@@ -1,10 +1,10 @@
 DB_VENDOR=POSTGRES
 DB_ADDR=postgres
-DB_DATABASE=keycloak
-DB_USER=keycloak
+DB_DATABASE: $$(cat /run/secrets/keycloak_user)
+DB_USER: $$(cat /run/secrets/keycloak_user)
 DB_SCHEMA=public
-DB_PASSWORD=keycloak
-KEYCLOAK_USER=keycloak
-KEYCLOAK_PASSWORD=keycloak
-KEYCLOAK_ADMIN=keycloak
-KEYCLOAK_ADMIN_PASSWORD=keycloak
+DB_PASSWORD: $$(cat /run/secrets/keycloak_user)
+KEYCLOAK_USER: $$(cat /run/secrets/keycloak_user)
+KEYCLOAK_PASSWORD: $$(cat /run/secrets/keycloak_user)
+KEYCLOAK_ADMIN: $$(cat /run/secrets/keycloak_user)
+KEYCLOAK_ADMIN_PASSWORD: $$(cat /run/secrets/keycloak_user)
