--- a/kong/kong.env
+++ b/kong/kong.env
@@ -1,10 +1,16 @@
-KONG_DATABASE=cassandra
-KONG_CASSANDRA_CONTACT_POINTS=cassandra
-KONG_PROXY_ACCESS_LOG=/dev/stdout
-KONG_ADMIN_ACCESS_LOG=/dev/stdout
-KONG_PROXY_ERROR_LOG=/dev/stderr
-KONG_ADMIN_ERROR_LOG=/dev/stderr
-KONG_ADMIN_LISTEN=0.0.0.0:8002, 0.0.0.0:8444 ssl
+KONG_DATABASE=postgres
+KONG_DATABASE=${KONG_DATABASE:-off}
+KONG_PG_DATABASE=${KONG_PG_DATABASE:-kong}
+KONG_PG_HOST=postgres-kong
+KONG_PG_USER=${KONG_PG_USER:-kong}
+KONG_PG_PASSWORD_FILE=/run/secrets/kong_postgres_password
 
-KONG_DATABASE=cassandra
-KONG_CASSANDRA_CONTACT_POINTS=cassandra
+
+KONG_ADMIN_ACCESS_LOG=/dev/stdout
+KONG_ADMIN_ERROR_LOG=/dev/stderr
+KONG_PROXY_LISTEN=${KONG_PROXY_LISTEN:-0.0.0.0:8000}
+KONG_ADMIN_LISTEN=${KONG_ADMIN_LISTEN:-0.0.0.0:8001}
+KONG_PROXY_ACCESS_LOG=/dev/stdout
+KONG_PROXY_ERROR_LOG=/dev/stderr
+KONG_PREFIX=${KONG_PREFIX:-/var/run/kong}
+#KONG_DECLARATIVE_CONFIG=/opt/kong/kong.yaml
