--- a/prometheus/config/prometheus.yaml
+++ b/prometheus/config/prometheus.yaml
@@ -14,54 +14,79 @@ scrape_configs:
     # scheme defaults to 'http'.
     static_configs:
          - targets: ['prometheus:9090']
-
-  - job_name: 'Event Service'
+  - job_name: 'Api Gateway'
     metrics_path: '/actuator/prometheus'
     scrape_interval: 2s
     static_configs:
-      - targets: ['host.docker.internal:59072']
+      - targets: ['host.docker.internal:8080']
         labels:
-          application: 'Event Service'
-  - job_name: 'Data Service'
+          application: 'Api Gateway'
+  - job_name: 'Config Server'
     metrics_path: '/actuator/prometheus'
     scrape_interval: 2s
     static_configs:
-      - targets: ['host.docker.internal:59142']
+      - targets: ['host.docker.internal:1234']
         labels:
-          application: 'Data Service'
-  - job_name: 'Fail Service'
-    metrics_path: '/actuator/prometheus'
-    scrape_interval: 2s
-    static_configs:
-      - targets: ['host.docker.internal:55602']
-        labels:
-          application: 'Fail Service'
-  - job_name: 'Backend Service'
-    metrics_path: '/actuator/prometheus'
-    scrape_interval: 2s
-    static_configs:
-      - targets: ['host.docker.internal:60332']
-        labels:
-          application: 'Backend Service'
-#  - job_name: 'Serverless Service'
+          application: 'Config Server'
+#  - job_name: 'Data Service'
 #    metrics_path: '/actuator/prometheus'
 #    scrape_interval: 2s
 #    static_configs:
-#      - targets: ['host.docker.internal:58754']
+#      - targets: ['host.docker.internal:61355']
 #        labels:
-#          application: 'Serverless Service'
-
-#  - job_name: 'consul'
-#    consul_sd_configs:
-#    - server: '172.17.0.3:8500'
-#      services:
-#      - data-service
-#      - event-service
-#    metrics_path: '/actuator/prometheus'
-#    relabel_configs:
-#    - source_labels: [__meta_consul_service_id]
-#      regex: '(.*)-service'
-#      replacement: '$1-service'
-#      target_label: node
-#    - source_labels: [__meta_consul_service_id]
-#      target_label: instance
+#          application: 'Data Service'
+#  - job_name: 'Fail Service'
+#    metrics_path: '/q/metrics'
+#    scrape_interval: 2s
+#    static_configs:
+#      - targets: ['host.docker.internal:63765']
+#        labels:
+#          application: 'Fail Service'
+#  - job_name: 'Backend Service'
+#    metrics_path: '/prometheus'
+#    scrape_interval: 2s
+#    static_configs:
+#      - targets: ['host.docker.internal:57227']
+#        labels:
+#          application: 'Backend Service'
+  - job_name: 'consul-spring'
+    scrape_interval: 3s
+    consul_sd_configs:
+    - server: 'host.docker.internal:8500'
+      services:
+      - data-service
+      - event-service
+      - api-gateway
+    metrics_path: '/actuator/prometheus'
+    relabel_configs:
+      - source_labels: [__meta_consul_service_id]
+        regex: '(.*)-service'
+        replacement: '$1-service'
+        target_label: node
+      - source_labels: [__meta_consul_service_id]
+        target_label: instance
+  - job_name: 'consul-quarkus'
+    scrape_interval: 3s
+    consul_sd_configs:
+    - server: 'host.docker.internal:8500'
+      services:
+      - fail-service
+    metrics_path: '/q/metrics'
+    relabel_configs:
+      - source_labels: ['__meta_consul_service_address', '__meta_consul_service_port']
+        separator: ':'
+        target_label: __address__
+  - job_name: 'consul-micronaut'
+    scrape_interval: 3s
+    consul_sd_configs:
+    - server: 'host.docker.internal:8500'
+      services:
+      - backend-service
+    metrics_path: '/prometheus'
+    relabel_configs:
+      - source_labels: [__meta_consul_service_id]
+        regex: '(.*)-service'
+        replacement: '$1-service'
+        target_label: node
+      - source_labels: [__meta_consul_service_id]
+        target_label: instance
